[build-system]
# requires = ["setuptools >= 40.6.0", "wheel"]
requires = ["hatchling", "wheel"]

# build-backend = "setuptools.build_meta"
build-backend = "hatchling.build"

[project]
name="grey_verifier"
dynamic = [ "version" ]

dependencies = [
  'dnspython'
]
authors = [
  { name="Yaroslav Polyakov", email="yaroslaff@gmail.com" },
]
description = "Smart SMTP email verifier which can even bypass greylisting!"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/yaroslaff/grey-verifier"
Issues = "https://github.com/yaroslaff/grey-verifier/issues"


[project.scripts]
grey-verifier = "grey_verifier:main"

[tool.hatch.version]
path = 'grey_verifier/__init__.py'
